Change build to use webpack

--- a/test/index.html
+++ b/test/index.html
@@ -46,14 +46,12 @@
 			}
 		</style>
 		<script src="./../dist/artemis.min.js"></script>
-		<script src="./../dist/artemis.min.map"></script>
-
-
 	</head>
 
 	<body>
 		<h1>Artemis Test</h1>
 		<script>
+			$_("h1").text ("Success!");
 		</script>
 	</body>
 </html>
