Add functions to find file extensions and check file type.

--- a/test/index.html
+++ b/test/index.html
@@ -165,6 +165,8 @@
 			}).catch ((error) => {
 				console.error (error);
 			});
+
+			console.log (FileSystem.isImage ('./some/file/image.png'));
 		});
 		</script>
 	</body>
