Fix IndexedDB adapter keys method and Space configuration method

--- a/test/index.html
+++ b/test/index.html
@@ -146,6 +146,8 @@
 				console.log (event);
 			});
 
+			students.keys ().then(keys => console.log (keys));
+
 
 			const remoteSpace = new Space (SpaceAdapter.RemoteStorage, {
 				name: 'myRemote',
