Migrate to typescript

--- a/test/index.html
+++ b/test/index.html
@@ -49,7 +49,7 @@
 				color: red;
 			}
 		</style>
-		<script src="./../dist/artemis.min.js"></script>
+		<script src="./../dist/artemis.browser.js"></script>
 	</head>
 
 	<body>
